# Ros2-Navigation-in-5-days

./: README.md
ros2_ws/src/project_localization/: CMakeLists.txt  package.xml
ros2_ws/src/project_localization/config/: amcl.yaml  localization.rviz
ros2_ws/src/project_localization/launch/: localization.launch.py  rviz.launch.py
ros2_ws/src/project_localization/src/: set_init_pose.py  spot_recorder.py
ros2_ws/src/project_localization/srv/: SpotSaverMsg.srv
ros2_ws/src/project_mapping/: CMakeLists.txt  package.xml
ros2_ws/src/project_mapping/config/: frames_2025-03-21_19.40.13.gv
ros2_ws/src/project_mapping/launch/: map_saver.launch.py  map_server.launch.py  mapping.launch.py
ros2_ws/src/project_mapping/maps/: map.pgm  map.yaml
ros2_ws/src/project_path_planning/: CMakeLists.txt  package.xml
ros2_ws/src/project_path_planning/config/: bt_navigator.yaml  planner_server.yaml
ros2_ws/src/project_path_planning/launch/: path_planning.launch.py
ros2_ws/src/project_path_planning/spots/: spots.yaml
ros2_ws/src/project_path_planning/src/: go_to_pose.py  spot_recorder.py
