cmake_minimum_required(VERSION 3.8)
project(project_localization)

if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
  add_compile_options(-Wall -Wextra -Wpedantic)
endif()

# find dependencies
find_package(ament_cmake REQUIRED)
# uncomment the following section in order to fill in
# further dependencies manually.
# find_package(<dependency> REQUIRED)

find_package(rosidl_default_generators REQUIRED)

rosidl_generate_interfaces(${PROJECT_NAME}
  "srv/SpotSaverMsg.srv"
)
# Install Python script
install(PROGRAMS
  src/set_init_pose.py
  src/spot_recorder.py
  DESTINATION lib/${PROJECT_NAME}
)


install(
  DIRECTORY src/
  DESTINATION share/${PROJECT_NAME}/src
)

install(
DIRECTORY
config
DESTINATION share/${PROJECT_NAME}/config
)

install(
DIRECTORY
launch
DESTINATION share/${PROJECT_NAME}/launch
)

if(BUILD_TESTING)
  find_package(ament_lint_auto REQUIRED)
  # the following line skips the linter which checks for copyrights
  # comment the line when a copyright and license is added to all source files
  set(ament_cmake_copyright_FOUND TRUE)
  # the following line skips cpplint (only works in a git repo)
  # comment the line when this package is in a git repo and when
  # a copyright and license is added to all source files
  set(ament_cmake_cpplint_FOUND TRUE)
  ament_lint_auto_find_test_dependencies()
endif()

ament_package()
